# qmtg

./: .gitignore  .gitmodules  Avatar.qml  Avatar.qmlc  Board.qml  Board.qmlc  CMakeLists.txt  Card.qmlc  Hand.qml  Hand.qmlc  HandModel.qmlc  README.md  main.cpp  main.qml  main.qmlc  qmtg.pro  temp.cpp
MTG/: Component.hpp  Constants.hpp  Enchant.hpp  Energy.hpp  Mana.hpp  Property.hpp  card.hpp  check.hpp  common.hpp  component.hpp  constants.hpp  context.hpp  event.hpp  factory.hpp  game.hpp  gamestate.hpp  mtg.hpp  player.hpp  query.hpp  random.hpp  systems.hpp
MTG/cards/: AeronautAdmiral.hpp  cards.hpp
MTG/system/: Common.hpp  CreaturesYouControlHaveEvasionSystem.hpp  system.hpp
doc/: MagicCompRules_20170119.txt  README
mtg/: mtg.hpp
test/: 5.TurnStructureTest.cpp  6.SpellsAbilitiesEffects.cpp  6.SpellsAbilitiesEffectsTest.cpp  GideonAllyOfZendikar.cpp  GideonAllyOfZendikarTest.cpp  TriggerSystemTest.cpp  TriggerTest.cpp  TurnTest.cpp  card.cpp  common.hpp  flycheck_GideonAllyOfZendikar.plist  game.cpp  player.cpp  players.cpp  startgame.cpp  testrunner.cpp
